# PythonSteps

./: .gitignore  Readme.md
_theoretical_knowledge/: fibonachi.py  main.py  matrix.py  point.py  switch_example.py
bosten_housing/: first_noteook.ipynb  main.py
contact_book/: contact.py  contacts.json  main.py
file_searcher/: main.py
file_searcher/data/: notes.txt  todo.txt
file_searcher/data/archive/: old_notes.txt
file_searcher/data/archive/older_archive/: oldest_note.txt
log_analyzer/: main.py  pyproject.toml
log_analyzer/src/log_analyzer/: __init__.py  parser.py  reader.py
log_analyzer/tests/: test_parser.py  test_reader.py  test_stats.py
todo_app/: requirements.txt
